--- a/views/maps.hbs
+++ b/views/maps.hbs
@@ -20,7 +20,7 @@
         <script src="maps.js">
         </script>
         <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key={your_key}&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN6q6jOWczlbNgBPd_ljm857YUqpyIoVU&callback=initMap%22%3E ">
         </script>
     </body>
 
