--- a/views/event.hbs
+++ b/views/event.hbs
@@ -14,20 +14,25 @@
         {{> menu}}
         <div>
             Event Page
-            <div class="container col-lg-6">
-                <div class="jumbotron">
-                    <div>
-                        Login Page
-                        <form class="form-inline">
-                            <div class="form-group">
-                                <!--                    <label for="exampleInputName2">Name</label>-->
-                                <input type="text" id="SearchBar" placeholder="Enter Event/Activity">
-                            </div>
-                            <button type="submit" class="btn btn-default">Search</button>
-                        </form>
+            <div class="row">
+                <div class="container col-lg-6">
+                    <div class="jumbotron">
+                        <div>
+                            Login Page
+                            <form class="form-inline">
+                                <div class="form-group">
+                                    <!--                    <label for="exampleInputName2">Name</label>-->
+                                    <input type="text" id="SearchBar" placeholder="Enter Event/Activity">
+                                </div>
+                                <button type="submit" class="btn btn-default">Search</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
+                <div class="container col-lg-6">
+                    <p>Map</p>
+                </div>
+        </div>
         </div>
     </body>
 
