--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,8 +11,27 @@
 
     <body>
         {{> menu}}
-        <div>
+<!--        <div class="container position=relative width="> -->
+        <div class="center">
             Login Page
+            <div>Welcome</div>
+            <div>
+                <form class="position=absolute ">
+                    <div class="form-group">
+                        <label for="User">Username</label>
+                        <input type="text" id="User" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <label for="PW">Password</label>
+                        <input class="form-control" type="text" id="PW" placeholder="Password">
+                    </div>
+                    <div class="inline justify-content=center" >
+                        <button type="submit" class="btn btn-default">Sign in</button>
+                        <button type="submit" class="btn btn-default">Join</button>
+                    </div>
+                </form>
+            </div>
+
         </div>
     </body>
 
