add css for login page

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,13 +7,19 @@
         <!--<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
         
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
+        <link href="/css/login.css" type="text/css" rel="stylesheet" />
     </head>
 
     <body>
+        <div id="bg"></div> 
         {{> menu}}
-        <div>
-            Login Page
+        <div id="indexlogodiv">
+            <img src="/css/src/thingsmyKidsdo.jpg">
         </div>
+        
+        
+        
+        
     </body>
 
 </html>
