--- a/style/menu.css
+++ b/style/menu.css
@@ -6,13 +6,13 @@ body {
 
 
 #logoDiv {
-   
+    background-image: url(src/thingsmyKidsdo.jpg);
+    background-size: cover; 
+    background-position: center center; 
     width: 60px;
     height: 60px;
     float: left;
-    border-style: solid;
-    border-width: 1px;
-    border-color: white;
+    
 }
 
 #firstRow {
