--- a/views/login.hbs
+++ b/views/login.hbs
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <label for="PW">Password</label>
-                        <input class="form-control" type="text" id="PW" placeholder="Password">
+                        <input type="text" id="PW" placeholder="Password"><!--class="form-control"-->
                     </div>
                     <div class="inline justify-content=center" >
                         <button type="submit" class="btn btn-default">Sign in</button>
