Update event.hbs, login.hbs, profile.hbs

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,9 +19,10 @@
 <!--        <div class="container position=relative width="> -->
         <div class="center">
             Login Page
-            <div>Welcome</div>
-            <div>
-                <form class="position=absolute ">
+
+            <div class="container">
+                <div>Welcome</div>
+                <form>
                     <div class="form-group">
                         <label for="User">Username</label>
                         <input type="text" id="User" placeholder="Username">
