--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="dropdown">
                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    Profiles
+                    Select Profile
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -26,8 +26,32 @@
                     <li><a href="#">Profile 2</a></li>
                     <li><a href="#">Profile 3</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Create a Profile</a></li>
+                    <li>
+                        <a href="#">
+                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">Create a Profile</button>
+                        </a>
+                    </li>
                 </ul>
+                <!-- Modal -->
+                <div id="myModal" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">Edit Profile</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Editing profile.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="container col-md-6">
@@ -36,13 +60,26 @@
                         <div class="container col-md-6">
                             <div class="box">
                                 <div class="inline-block">
-                                    <img class="profile-pic" src="sample.jpg" alt="pic" style="max-width: 300px; max-height: 300px">
-                                    <div class="btn-group-vertical" role="group" aria-label="...">
-                                        <button type="button" class="btn btn-default">Edit profile</button>
-                                        <button type="button" class="btn btn-default">Delete profile</button>
+
+                                    <div class="container">
+                                        <ul class="list-inline">
+                                            <li>
+                                                <a href="#">
+                                                    <button type="button" class="btn btn-default">Edit profile</button>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <button type="button" class="btn btn-default">Delete profile</button>
+                                                </a>
+                                            </li>
+                                        </ul>
                                     </div>
+         <!--                       <div class="btn-group-vertical" role="group" aria-label="..."></div>-->
                                 </div>
-                                <form class="form-horizontal">
+
+                                <form class="form-horizontal pf">
+                                    <img class="profile-pic" src="sample.jpg" alt="pic" style="max-width: 300px; max-height: 300px">
                                     <div class="form-group">
                                         <label class="col-sm-2 control-label">Name</label>
                                         <div class="col-sm-10">
@@ -62,11 +99,6 @@
                                         </div>
                                     </div>
                                 </form>
-<!--                                <div class="pf">
-                                    <p>Name: Jay</p>
-                                    <p>Age: 7</p>
-                                    <p>Interests: Soccer, Drawing</p>
-                                </div>  -->
                             </div>
                         </div>
                     </div>
