--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Bootstrap CSS -->
+         <!-- Bootstrap CSS -->
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
         <!--<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
         
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
-        <link href="/css/maps.css" type="text/css" rel="stylesheet" />
-   
+
     </head>
 
     <body>
         {{> menu}}
         <div>
-            maps Page
+            Admin Page
+            <p>{{result}}</p>
         </div>
-        <div id="map"></div>
-        <script src="maps.js">
-        </script>
-        <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key={your_key}&callback=initMap">
-        </script>
     </body>
 
 </html>
