--- a/views/event.hbs
+++ b/views/event.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Bootstrap CSS -->
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <!--<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
@@ -27,7 +27,7 @@
                                     <input type="text" id="SearchBar" placeholder="Enter Event/Activity">
                                 </div>
                                 <button type="submit" class="btn btn-default">Search</button>
-                            </form>
+                           </form>
                         </div>
                     </div>
 		<div class="col-lg-6">
