--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,16 +4,31 @@
         <!-- Bootstrap CSS -->
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-        <!--<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
         
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
+        <link href="/css/login.css" type="text/css" rel="stylesheet" />
     </head>
 
     <body>
-        {{> menu}}
-        <div>
-            Login Page
+        <div id="bg">{{> menu}}</div>
+
+
+        <div class="main">
+            <p class="sign" align="center">Sign in</p>
+            <form class="form1">
+                <input class="un " type="text" align="center" placeholder="Username">
+                <input class="pass" type="password" align="center" placeholder="Password">
+                <a class="submit" align="center">Sign in</a>
+                <p class="forgot" align="center"><a href="#">Forgot Password?</p>
+
+
         </div>
+        
+        
+        
+        
     </body>
 
 </html>
