--- a/views/login.hbs
+++ b/views/login.hbs
@@ -21,6 +21,7 @@
                 <input class="un " type="text" align="center" placeholder="Username">
                 <input class="pass" type="password" align="center" placeholder="Password">
                 <a class="submit" align="center">Sign in</a>
+                <a class="submit" align="center" href="/register">Register</a>  
                 <p class="forgot" align="center"><a href="#">Forgot Password?</p>
 
 
