--- a/views/event.hbs
+++ b/views/event.hbs
@@ -27,7 +27,7 @@
                                     <!--                    <label for="exampleInputName2">Name</label>-->
                                     <input type="text" id="SearchBar" placeholder="Enter Event/Activity">
                                 </div>
-                                <button type="submit" class="btn btn-default">Search</button>
+                                <button type="submit" class="btn btn-default" id="getData">Search</button>
                            </form>
                         </div>
                     </div>
