--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -2,6 +2,7 @@
 <html>
     <head>
          <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
         <!--<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
@@ -11,11 +12,69 @@
     </head>
 
     <body>
+
         {{> menu}}
-        <div>
-            Admin Page
-            <p>{{result}}</p>
+
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-7">
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <td>Event ID</td>
+                            <td>Vendor</td>
+                            <td>Event</td>
+                            <td>Event Description</td>
+                            <td>Tag name</td>
+                            <td>Actions</td>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {{#each data}}
+                        <tr>
+                            <td>{{event_id}} </td>
+                            <td>{{vendor_id}}</td>
+                            <td>{{name}}</td>
+                            <td>{{description}}</td>
+                            <td>{{tag_name}}</td>
+                            <td>
+                                <!--<a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>-->
+                                <!--<a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>-->
+                                <a href="#" class="btn btn-info">Edit</a>
+                                <a href="#" class="btn btn-danger">Delete</a>
+                            </td>
+                        </tr>
+                        {{/each}}
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-5">
+                    <div class="card-body">
+
+                        <form action="/add" method="POST">
+                            <div class="form-group">
+                                <input type="text" name="vendor" placeholder="Vendor" class="form-control" autofocus>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="event" placeholder="Event" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="event_des" placeholder="Event Description" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="tag" placeholder="Tag" class="form-control">
+                            </div>
+
+                            <button type="submit" class="btn btn-primary">
+                                save event
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </body>
 
 </html>
