--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,9 +22,8 @@
                 <input class="pass" type="password" align="center" placeholder="Password">
                 <a class="submit" align="center">Sign in</a>
                 <a class="submit" align="center" href="/register">Register</a>  
-                <p class="forgot" align="center"><a href="#">Forgot Password?</p>
-
-
+                <p class="forgot" align="center"><a href="#">Forgot Password?</a></p>
+            </form>
         </div>
         
         
