--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
-        <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-        <!--<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
         
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        
+
 
     </head>
 
@@ -17,7 +17,7 @@
 
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <table class="table table-bordered table-hover">
                         <thead>
                         <tr>
@@ -49,27 +49,9 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-6">
                     <div class="card-body">
-
-                        <form action="/add" method="POST">
-                            <div class="form-group">
-                                <input type="text" name="vendor" placeholder="Vendor" class="form-control" autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" name="event" placeholder="Event" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" name="event_des" placeholder="Event Description" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" name="tag" placeholder="Tag" class="form-control">
-                            </div>
-
-                            <button type="submit" class="btn btn-primary">
-                                save event
-                            </button>
-                        </form>
+                        {{> addevent}}
                     </div>
                 </div>
             </div>
@@ -79,3 +61,5 @@
 
 </html>
    
+<script src="/scripts/admin.js"></script>
+
